--- a/記事原稿.md
+++ b/記事原稿.md
@@ -1,9 +1,10 @@
 #タイトル
-Watson×VR！Unity初心者でもできる、VR空間でUnityちゃんとおしゃべりアプリ！(v4)
+
+Watson×Unity！初心者でもできる、VR空間でUnityちゃんとおしゃべりアプリ！
 
 ---
 
-今話題の技術や最新技術への挑戦を応援する【IBM×teratailのコラボ企画】第三弾です。今回はWatson×VRを組み合わせたサンプルのご紹介です。
+今話題の技術や最新技術への挑戦を応援する【IBM×teratailのコラボ企画】第三弾です。今回はWatson×バーチャルリアリティ(以下VR)を組み合わせたサンプルのご紹介です。
 
 #はじめに
 
@@ -67,7 +68,7 @@ Unityを立ち上げ、NEW Projectを作成してください。
 
 #Unityちゃんをしゃべらせよう
 
-Unityちゃんをしゃべらせるために、WatsonAPIの「Speach To Text」と「Text To Speach」、「Conversation Service」を使います。話しかけたときの音声データを「Speach To Text」で文字に変換し、「Conversation Service」で解釈し、返ってきた言葉を「Text To Speach」を使って音声で返す、というものです。
+Unityちゃんをしゃべらせるために、WatsonAPIの「[Speach To Text](https://www.ibm.com/watson/jp-ja/developercloud/speech-to-text.html)」と「[Text To Speech](https://www.ibm.com/watson/jp-ja/developercloud/text-to-speech.html)」、「[Conversation Service](https://www.ibm.com/watson/jp-ja/developercloud/conversation.html)」を使います。話しかけたときの音声データを「Speech To Text」で文字に変換し、「Conversation Service」で解釈し、返ってきた言葉を「Text To Speech」を使って音声で返す、というものです。
 
 ##UnitySDKのダウンロード
 
@@ -87,7 +88,7 @@ Bluemixにログインし、[ダッシュボード](https://console.bluemix.net/
 
 ![8.png](https://qiita-image-store.s3.amazonaws.com/0/99740/eaa461fa-ffd0-4339-4f43-2c643316028e.png)
 
-カタログの中から、「Speech To Text」を見つけてクリックすると次のように表示されるので、サービス名をSTT-Unity-Chanなど自身が分かりやすいように設定し「作成」ボタンを押してください。
+カタログの中から、「[Speech To Text](https://www.ibm.com/watson/jp-ja/developercloud/speech-to-text.html)」を見つけてクリックすると次のように表示されるので、サービス名をSTT-Unity-Chanなど自身が分かりやすいように設定し「作成」ボタンを押してください。
 
 ![9.png](https://qiita-image-store.s3.amazonaws.com/0/99740/87d15f6c-3725-fa06-2122-95fe7da9e894.png)
 
@@ -115,15 +116,15 @@ Completeと表示されれば完了です。
 
 ![15.png](https://qiita-image-store.s3.amazonaws.com/0/99740/2e80d577-54b5-7995-6a42-444964e3a405.png)
 
-##Speach to Textを試してみよう。
+##Speech to Textを試してみよう。
 
-公式の[サンプルコード](https://github.com/watson-developer-cloud/unity-sdk#speech-to-text)を参考にしながらSpeach to Textを試してみましょう。
+公式の[サンプルコード](https://github.com/watson-developer-cloud/unity-sdk#speech-to-text)を参考にしながら[Speech to Text](https://www.ibm.com/watson/jp-ja/developercloud/speech-to-text.html)を試してみましょう。
 
-ProjectのAssets->UnityChan->Scriptsのフォルダ直下に、「Create▼」から「C# Script」を選択し、ファイル名を生成します。ファイル名は「SampleSpeachToText」などとしておきます。
+ProjectのAssets->UnityChan->Scriptsのフォルダ直下に、「Create▼」から「C# Script」を選択し、ファイル名を生成します。ファイル名は「SampleSpeechToText」などとしておきます。
 
 ![16.png](https://qiita-image-store.s3.amazonaws.com/0/99740/efad3c8d-035e-068b-7972-33ca813f4a4c.png)
 
-SampleSpeachToText.csには、先の[サンプルコード](https://github.com/watson-developer-cloud/unity-sdk#speech-to-text)をベースに、マイクから集音できるように改変します。下記のようになります。
+SampleSpeechToText.csには、先の[サンプルコード](https://github.com/watson-developer-cloud/unity-sdk#speech-to-text)をベースに、マイクから集音できるように改変します。下記のようになります。
 
 ※createでC#ファイルを作成するとき、デフォルトでは「NewBehaviourScript」という名前がついていますが、このまま作成してしまうと、下記コードの`public class SampleSpeachToText : MonoBehaviour { ... }`の部分が`public class NewBehaviourScript : MonoBehaviour { ... }`となってしまいます。ファイル作成後に「NewBehaviourScript」という名前を変更する(該当がいるを右クリック->Renameで変更可能)際は、コード内の「NewBehaviourScript」も書き換えることに注意してください。
 
@@ -198,13 +199,13 @@ SampleSpeechToText.csでは、マイクから集音しているので、unitycha
 
 
 
-##Text to Speachを試してみよう。
+##Text to Speechを試してみよう。
 
-先ほどと同様の手順でText to Speachも試して見ましょう。Bluemixの[ダッシュボード](https://console.bluemix.net/dashboard/apps)にログインし、[カタログ](https://console.bluemix.net/catalog/)からText to Speachを選択し、サービス名を「TTS-Unity-Chan」などとして作成します。「資格情報の表示」のjsonファイルをコピーしたら、Unity画面を開き、上部メニューのWatson->Config Editorを開き、「PASTE CREDENTIALS」の欄に貼り付けて「ApplyCredentials」をクリックです。
+先ほどと同様の手順で[Text to Speech](https://www.ibm.com/watson/jp-ja/developercloud/text-to-speech.html)も試して見ましょう。Bluemixの[ダッシュボード](https://console.bluemix.net/dashboard/apps)にログインし、[カタログ](https://console.bluemix.net/catalog/)からText to Speechを選択し、サービス名を「TTS-Unity-Chan」などとして作成します。「資格情報の表示」のjsonファイルをコピーしたら、Unity画面を開き、上部メニューのWatson->Config Editorを開き、「PASTE CREDENTIALS」の欄に貼り付けて「ApplyCredentials」をクリックです。
 
 ![20.png](https://qiita-image-store.s3.amazonaws.com/0/99740/7533ca8a-c58b-f091-4a37-685856c58da6.png)
 
-公式の[サンプルコード](https://github.com/watson-developer-cloud/unity-sdk#text-to-speech)を参考にしながらText to Speachを試してみましょう。
+公式の[サンプルコード](https://github.com/watson-developer-cloud/unity-sdk#text-to-speech)を参考にしながらText to Speechを試してみましょう。
 
 ProjectのAssets->UnityChan->Scriptsのフォルダ直下に、「Create▼」から「C# Script」を選択し、ファイルを生成します。ファイル名は「SampleTextToSpeech」としておきます。
 
@@ -269,7 +270,7 @@ public class SampleTextToSpeech : MonoBehaviour {
 
 ###Conversation ServiceをUnityに適用させる
 
-さて次はConversation Serviceを試してみます。WatsonのConversation APIでは、こちら側が話しかけた内容に対して、適切な返答を返してくれるよう学習できるものです。
+さて次は[Conversation Service](https://www.ibm.com/watson/jp-ja/developercloud/conversation.html)を試してみます。WatsonのConversation APIでは、こちら側が話しかけた内容に対して、適切な返答を返してくれるよう学習できるものです。
 
 ではConversation APIをUnityに適用させていきましょう。途中までの手順はこれまでと同じで、Bluemixの[ダッシュボード](https://console.bluemix.net/dashboard/apps)にログインし、[カタログ](https://console.bluemix.net/catalog/)からConversationを選択し、サービス名を「Conv-Unity-Chan」などとして作成します。「資格情報の表示」のjsonファイルをコピーしたら、Unity画面を開き、上部メニューのWatson->Config Editorを開き、「PASTE CREDENTIALS」の欄に貼り付けて「ApplyCredentials」をクリックです。
 
@@ -330,7 +331,7 @@ Entityを「食事メニュー」とし、Valueに思いついた食事メニュ
 
 ![34.png](https://qiita-image-store.s3.amazonaws.com/0/99740/ad37b913-b6e9-256a-b2eb-6175c5584ea3.png)
 
-右下赤枠で囲んだ部分に「おはよう」などの「#あいさつ」Intentに登録した言葉を入力し、エンターを押してみてくさい。「おはよう」が「#あいさつ」Intentとして認識され、「おはようございます。今日も1日、頑張りましょう！」と返されるので、正常に動作していることが確認できます。
+右下赤枠で囲んだ部分に「おはよう」などの「#あいさつ」Intentに登録した言葉を入力し、エンターを押してみてくさい。「おはよう」が「#あいさつ」Intentとして認識され、「やっほー！」と返されるので、正常に動作していることが確認できます。
 
 ![35.png](https://qiita-image-store.s3.amazonaws.com/0/99740/31f36f5a-e469-c6dc-3f61-356961f12121.png)
 
@@ -392,7 +393,7 @@ public class SampleConversation : MonoBehaviour {
 
 #Unityちゃんと会話ができるようにしよう
 
-さて、今試した3つのWatson API、「Speach to Text」と「Text to Speach」と「Conversation Service」を組み合わせて、「おはよう」と話しかけたら「おはようございます。今日も1日、頑張りましょう！」と返してくれるようにしましょう。
+さて、今試した3つのWatson API、「[Speach to Text](https://www.ibm.com/watson/jp-ja/developercloud/speech-to-text.html)」と「[Text to Speech](https://www.ibm.com/watson/jp-ja/developercloud/text-to-speech.html)」と「[Conversation Service](https://www.ibm.com/watson/jp-ja/developercloud/conversation.html)」を組み合わせて、「おはよう」と話しかけたら「やっほー！」と返してくれるようにしましょう。
 ProjectビューのAssets->UnityChan->Scriptに、「C# Script」を作成してください。ファイル名は「WatsonConversation」としておきましょう。
 
 コードは下記となります。
@@ -595,7 +596,7 @@ public class WatsonConversation : MonoBehaviour {
 	SpeechToText m_SpeechToText = new SpeechToText();
 	TextToSpeech m_TextToSpeech = new TextToSpeech();
 	private Conversation m_Conversation = new Conversation();
-	private string m_WorkspaceID = "d2490f25-f020-4fda-bf7c-cca59993d8d5";
+	private string m_WorkspaceID = "(ここには各々のWorkspace IDが入ります)";
 
 	private Animator animator; //ここを追加
 	private const string key_isGreet = "isGreet"; //ここを追加
@@ -719,6 +720,8 @@ public class gyro : MonoBehaviour {
 }
 ```
 
+なお、本記事では、スマホのジャイロセンサーの反応をONにすることで、簡易的なスマホVRを試せるようにしましたが、UnityにはVR用のAssetsも多数用意されております。それらを活用することで、簡単にVR用に画面分割するなど、高度な設定もできるようになりますので、ぜひ試してみてください。
+
 #実機で確認しよう
 
 左上メニューのFile->Build Settings...を選択してください。
@@ -733,5 +736,5 @@ public class gyro : MonoBehaviour {
 
 #おわりに
 いかがでしたでしょうか？
-今回はUnityを使って簡単に3Dキャラクターの設定手順と、「Speach To Text」「Text To Speach」「Conversation Service」の組み込み方をご紹介しました。ここで紹介した方法で、3Dモデルの動きを強化したり、Conversationの会話パターンをさらにつくり込むことで、自分の理想の3Dモデルへと成長させていくことができるかと思います。ぜひいろいろ試してみてください。
+今回はUnityを使って簡単に3Dキャラクターの設定手順と、「Speach To Text」「Text To Speech」「Conversation Service」の組み込み方をご紹介しました。ここで紹介した方法で、3Dモデルの動きを強化したり、Conversationの会話パターンをさらにつくり込むことで、自分の理想の3Dモデルへと成長させていくことができるかと思います。ぜひいろいろ試してみてください。
 
