1枚目の画像を入れた

--- a/記事原稿.md
+++ b/記事原稿.md
@@ -12,6 +12,8 @@ VR元年と言われた2016年以降、「Oculas」や「HTC Vive」、「PlaySt
 
 今回はそんな夢のようなVRアプリの第一歩として、Unityちゃんとスマホを通じてVR空間で会話できるようなアプリを作ってみます。
 
+![img11.png](https://qiita-image-store.s3.amazonaws.com/0/99740/0723be76-19c2-f2fa-d7a6-444c09da78d7.png)
+
 ##利用技術について
 
 今回の記事では主にUnity（Versionは5.6.2）を使っていきます。
